[package]
name = "url-shortener"
version = "0.1.0"
authors = ["Q3-113 <simonoswald@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
lazy_static = "1.4.0"
validator = "0.11.0"
hex = "0.4.2"
base-62 = "0.1.1"
urlencoding = "1.1.1"